[package]
name = "date_header"
version = "1.0.5"
authors = ["Jayshua Nelson <me@jayshuanelson.com>"]
license = "MIT/Apache-2.0"
description = "Parsing and formatting for the HTTP Date: header"
keywords = ["http", "date", "time", "simple", "timestamp"]
readme = "README.md"
repository = "https://github.com/jayshua/date_header"
edition = "2021"

[dev-dependencies]
criterion = "0.3.5"
proptest = "1.2.0"
regex = "1.9.3"

[[bench]]
name = "benchmarks"
harness = false
